[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ksmesopy"
version = "0.1.0"
description = "Python API for the Kansas Mesonet"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
app = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://mesonet.k-state.edu"
Repository = "https://github.com/<your-username>/ksmesopy"

[tool.setuptools.packages.find]
where = ["."]
include = ["ksmesopy*"]
