[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ksmesopy"
version = "0.5.0"
description = "Python API for the Kansas Mesonet"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
app = ["guile"]
 
[project.scripts]
ksmesopy-app = "ksmesopy.app:main"
 
[project.urls]
Homepage = "https://mesonet.k-state.edu"
Repository = "https://github.com/soilwater/ksmesopy"
 
[tool.setuptools.packages.find]
where = ["."]
include = ["ksmesopy*"]
